Introduce handler for M-model moppers
Signed-off-by: Alexander Falkenstern <alexander.falkenstern@gmail.com>